--- a/_docker-compose.yml
+++ b/_docker-compose.yml
@@ -25,9 +25,8 @@ services:
         APACHE_VERSION: ${APACHE_VERSION}
     depends_on:
       - php
-      - mysql
     networks:
-      - frontend1
+      - frontend
       - backend
     ports:
       - "${EXTERNAL_APACHE_PORT}:80"
@@ -53,28 +52,9 @@ services:
       MYSQL_USER: "${DB_USERNAME}"
       MYSQL_PASSWORD: "${DB_PASSWORD}"
     container_name: ${DOCKER_IMAGE_PREFIX}mysql
-  phpmyadmin:
-    image: phpmyadmin
-    depends_on:
-      - mysql
-    networks:
-      - frontend2
-      - backend
-    restart: always
-    environment:
-      PMA_HOST: mysql
-      PMA_USER: "${DB_USERNAME}"
-      PMA_PASSWORD: "${DB_PASSWORD}"
-      PMA_PORT: 3306
-      PMA_ARBITRARY: 1
-    ports:
-      - 5000:80
-    container_name: ${DOCKER_IMAGE_PREFIX}phpmyadmin
 networks:
-  frontend1:
-    name: ${DOCKER_IMAGE_PREFIX}frontend1
-  frontend2:
-    name: ${DOCKER_IMAGE_PREFIX}frontend2
+  frontend:
+    name: ${DOCKER_IMAGE_PREFIX}frontend
   backend:
     name: ${DOCKER_IMAGE_PREFIX}backend
 volumes:
